[tool.poetry]
name = "blaise-instrument-metadata-service"
version = "0.1.0"
description = ""
authors = ["Nik Webb <nik.webb@ons.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
make = "^0.1.6"
Flask = "^2.0.3"
google-cloud-datastore = "^2.7.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
behave = "^1.2.6"
pytest = "^7.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
