[tool.poetry]
package-mode = false
name = "blaise-instrument-metadata-service"
version = "0.1.0"
description = ""
authors = ["Blaise 5 team"]

[tool.poetry.dependencies]
python = "^3.13"
make = "^0.1.6"
Flask = "^3.1.0"
google-cloud-datastore = "^2.19.0"
requests = "^2.32.3"
google-auth = "^2.6.0"
google-cloud-pubsub = "^2.19.0"
google-cloud-tasks = "^2.15.0"
config = "^0.5.1"
python-dotenv = "^0.19.2"
pytest = "^8.4.2"
Flask-HTTPAuth = "^4.5.0"
phonenumbers = "^8.12.46"
google-cloud-logging = "^3.11.4"
dataclasses-json = "^0.5.7"
dataclass-wizard = "^0.22.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
behave = "^1.3.3"
pytest = "^8.4.2"
isort = "^5.10.1"
python-dotenv = "^0.19.2"
flake8 = "^7.3.0"
mypy = "^1.17.1"
types-requests = "^2.28.3"
types-Flask = "^1.1.6"
pytest-cov = "^6.3.0"
requests-mock = "^1.12.1"
Flask = "^3.1.0"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.36"
phonenumbers = "^8.12.46"
pytest-lazy-fixture = "^0.6.3"
mocker = "^1.1.1"
responses = "^0.20.0"
requests-mock-flask = "^2022.4.3"
google-cloud = "^0.34.0"
google-cloud-datastore = "^2.19.0"
types-protobuf = "^3.19.22"
types-pytest-lazy-fixture = "^0.6.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[flake8]
max-line-length = 120